# story-weaver

./: .eslintignore  .eslintrc.json  .gitignore  .tsbuildinfo  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  REFACTORING_STATUS.md  ROADMAP.md  SECURITY.md  SUPPORT.md  commitlint.config.cjs  dependency-cruiser.config.js  eslint.config.js  index.html  jest.config.cjs  jest.config.js  knip.json  package-lock.json  package.json  playwright.config.mjs  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
HomebrewFormula/: frame-forge.rb  plotcraft.rb
docs/: BRAND_GUIDELINES.md  README.md  _navbar.md  _sidebar.md  index.html  index.md
docs/.vitepress/: config.mjs
docs/adr/: 0001-tauri-desktop-architecture.md  0002-frontend-monorepo-ddd.md  0003-platform-adapter.md  0004-brand-redesign.md  0006-pipeline-engine.md  index.md
docs/api/: ai-service.md  image-generation.md  index.md  overview.md  pipeline-service.md  subtitle-service.md  tts-service.md
docs/deployment/: build.md  (+5 more)
e2e/: basic.spec.ts
jscpd-report/: jscpd-report.json
scripts/: docs-check-links.mjs  render-assets.py  run-evaluation.ts  safe-react-fc-transform.py
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  logger.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  file.rs  mod.rs  shortcuts.rs  video.rs
src-tauri/src/constants/: allowed_dirs.rs  mod.rs
src-tauri/src/models/: app_settings.rs  mod.rs  shortcut.rs  video_metadata.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/config/: mod.rs  settings.rs
src-tauri/src/services/ffmpeg/: mod.rs
src-tauri/src/services/video/: analyzer.rs  cutter.rs  mod.rs  preview.rs  transitions.rs
src-tauri/src/utils/: ffmpeg_utils.rs  idgen.rs  mod.rs  path_validator.rs
(+1074 files in other folders)
